# Hydra

./: .clang-format  .cmake-format.yaml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  CMakeLists.txt  DISCLAIMER  MANIFEST.in  README.md  colcon.pkg  hydra_build_config.h.in  package.xml  pyproject.toml  setup.cfg  setup.py
eval/: CMakeLists.txt  README.md  pyproject.toml
eval/src/: graph_utilities.cpp  place_evaluator.cpp  place_metrics.cpp  room_evaluator.cpp  room_io.cpp  room_metrics.cpp
eval/tools/: compress_graph.cpp  compute_filtrations.cpp  evaluate_places.cpp  evaluate_rooms.cpp  gt_trajectory_optimizer.cpp  merge_graphs.cpp  object_reconciliation.cpp  optimize_graph.cpp
hydra/: CMakeLists.txt  README.md  package.xml
hydra/scripts/: export_label_embeddings.py  modify_dgraph.py
hydra/src/: CMakeLists.txt
hydra_dsg_builder/: .gitignore  CMakeLists.txt  README.md  package.xml
hydra_dsg_builder/config/: ade20k_mp3d_typology.yaml  ade20k_typology.yaml
hydra_dsg_builder/launch/: d455_dsg_builder.launch  dsg_builder.launch  dsg_optimizer.launch  dsg_streaming_visualizer.launch  dsg_visualizer.launch  mp3d_incremental_dsg.launch  sidpac_incremental_dsg.launch  simmons_d455_incremental.launch  uhumans2_incremental_dsg.launch
hydra_dsg_builder/notebooks/: homology_seeded_clustering.py  room_debugging.py
hydra_dsg_builder/output/: .gitignore
hydra_dsg_builder/rviz/: dsg_visualizer.rviz  mp3d.rviz  sidpac.rviz  uhumans2.rviz
hydra_dsg_builder/scripts/: copy_static_tfs.py  decompress_uhumans2.py  download_uhumans2.py  export_label_embeddings.py  make_colormap.py  modify_dgraph.py
hydra_dsg_builder/src/: disjoint_set.cpp  dsg_lcd_descriptors.cpp  dsg_lcd_detector.cpp  dsg_lcd_matching.cpp  dsg_lcd_registration.cpp  dsg_optimizer_node.cpp  dsg_update_functions.cpp  dsg_visualizer_node.cpp  graph_clustering.cpp  graph_filtration.cpp  hydra_config.cpp  incremental_dsg_backend.cpp  incremental_dsg_builder_node.cpp  incremental_dsg_frontend.cpp  incremental_dsg_lcd.cpp  incremental_mesh_segmenter.cpp  incremental_room_finder.cpp  lcd_gnn_descriptors.cpp  lcd_visualizer.cpp  merge_handler.cpp  minimum_spanning_tree.cpp  node_utilities.cpp  object_helpers.cpp  room_colormap.cpp  room_finder.cpp  room_helpers.cpp  ros_frontend.cpp  shared_module_state.cpp  subgraph_extraction.cpp  visualizer_plugins.cpp
hydra_dsg_builder/tests/: utest_configs.cpp  utest_dsg_lcd_descriptors.cpp  utest_dsg_lcd_matching.cpp  utest_dsg_lcd_module.cpp  utest_dsg_lcd_registration.cpp  utest_dsg_update_functions.cpp  utest_frontend.cpp  utest_graph_clustering.cpp  utest_graph_filtration.cpp  utest_incremental_room_finder.cpp  utest_lcd_gnn_descriptors.cpp  utest_main.cpp  utest_merge_handler.cpp  utest_minimum_spanning_tree.cpp  utest_room_finder.cpp  utest_room_helpers.cpp  utest_subgraph_extraction.cpp
hydra_dsg_builder_ros/: CMakeLists.txt  package.xml
hydra_dsg_builder_ros/cfg/: GvdVisualizer.cfg
hydra_dsg_builder_ros/config/: ros_params.yaml
hydra_dsg_builder_ros/launch/: d455_dsg_builder.launch  dsg_builder.launch  dsg_optimizer.launch  hydra.launch  hydra_robot.launch  hydra_robot_t265.launch  mp3d.launch  mp3d_incremental_dsg.launch  sidpac.launch  sidpac_incremental_dsg.launch  simmons_a1.launch  simmons_jackal.launch  uhumans2.launch  uhumans2_incremental_dsg.launch
hydra_dsg_builder_ros/rviz/: a1.rviz  a1_topdown.rviz  d455.rviz  sidpac.rviz  sidpac_topdown.rviz  simmons.rviz  sparkal1.rviz  uhumans2.rviz
hydra_dsg_builder_ros/scripts/: copy_static_tfs.py  run_robot.sh
hydra_dsg_builder_ros/src/: dsg_optimizer_node.cpp  gvd_validator.cpp  gvd_visualization_utilities.cpp  hydra_ros_pipeline.cpp  hydra_topology_node.cpp  incremental_dsg_builder_node.cpp  lcd_visualizer.cpp  node_utilities.cpp  ros_backend.cpp  ros_frontend.cpp  ros_lcd_registration.cpp  ros_reconstruction.cpp  topology_server_visualizer.cpp  visualizer_plugins.cpp
hydra_eval/: CMakeLists.txt  package.xml
hydra_eval/cmake/: json.CMakeLists.txt.in  nanoflann.CMakeLists.txt.in
hydra_eval/config/: gt_sidpac_f13.yaml
hydra_eval/launch/: places_viz.launch  rooms_visualizer.launch
hydra_eval/rviz/: places_eval_viz.rviz
hydra_eval/src/: gt_trajectory_optimizer.cpp  places_eval_node.cpp  places_visualizer_node.cpp  room_eval_node.cpp  room_utils.cpp  room_visualizer_node.cpp
hydra_msgs/: CMakeLists.txt  package.xml
hydra_msgs/msg/: ActiveLayer.msg  ActiveMesh.msg  DsgUpdate.msg
hydra_msgs/srv/: GetDsg.srv  QueryFreespace.srv
hydra_ros/: CMakeLists.txt  README.md  hydra_utils_cmake  nodelet_plugins.xml  package.xml
hydra_ros/cfg/: Colormap.cfg  DynamicLayerVisualizer.cfg  GvdVisualizer.cfg  LayerVisualizer.cfg  Visualizer.cfg
hydra_ros/config/: graph_visualization_config.yaml
hydra_ros/launch/: hydra.launch  hydra_robot.launch  hydra_robot_t265.launch
hydra_ros/rviz/: a1.rviz  hydra_streaming_visualizer.rviz  mp3d.rviz  sidpac.rviz  sparkal2.rviz  uhumans2.rviz  uhumans2_topdown.rviz
hydra_ros/scripts/: run_robot.sh  run_robot_t265.sh  scrape_kimera_extrinsics.py
hydra_ros/tests/: CMakeLists.txt  hydra_ros.test  main.cpp  test_ros_config.cpp
hydra_rviz_plugin/: CMakeLists.txt  hydra.rviz  package.xml  plugin_descriptions.xml
hydra_rviz_plugin/cfg/: LayerVisualizer.cfg  Visualizer.cfg
hydra_rviz_plugin/config/: defaults.yaml
hydra_rviz_plugin/launch/: hydra_streaming_visualizer.launch  hydra_visualizer.launch  hydra_visualizer_base.xml  hydra_visualizer_rviz.xml
hydra_rviz_plugin/rviz/: hydra.rviz
hydra_rviz_plugin/src/: bounding_box_visual.cpp  color_functions.cpp  colormap.cpp  colormap_utils.cpp  common.cpp  dynamic_layer_config.cpp  dynamic_layer_visual.cpp  edge_config.cpp  (+7 more)
hydra_topology/: CMakeLists.txt  README.md  package.xml
hydra_utils/: CMakeLists.txt  README.md  package.xml
kimera_batch_dsg/: CMakeLists.txt  README.md  package.xml
kimera_dsg_builder/: .gitignore  CMakeLists.txt  README.md  package.xml
kimera_path_planning/: CMakeLists.txt  package.xml
kimera_scene_graph/: CMakeLists.txt  README.md  README.txt  package.xml
(+1734 files in other folders)
