[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "hydra_python"
version = "0.0.1"
description = "Python bindings for Hydra"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
dependencies = [
    "click",
    "distinctipy",
    "imageio",
    "networkx",
    "numpy",
    "pyqtgraph",
    "pyyaml",
    "scipy",
    "spark_dataset_interfaces @ git+https://github.com/MIT-SPARK/spark_dataset_interfaces",
]
authors = [
  {name = "Nathan Hughes", email="na26933@mit.edu"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/MIT-SPARK/Hydra"

[project.scripts]
hydra = "hydra_python.commands:main.cli"

[tool.scikit-build]
cmake.source-dir = "python"

[tool.scikit-build.wheel.packages]
"hydra_python" = "python/src/hydra_python"
"hydra_python/config" = "config"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
