[metadata]
name = hydra_python
version = 0.0.1
author = Nathan Hughes
author_email = na26933@mit.edu
url = "https://github.com/MIT-SPARK/Hydra"
description = Python bindings for around Hydra
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages =
    hydra_python
    hydra_python._plugins
    hydra_python.config
    hydra_python.commands
package_dir =
    hydra_python = python/src/hydra_python
    hydra_python._plugins = python/src/hydra_python/_plugins
    hydra_python.config = config
install_requires =
    click
    distinctipy
    numpy
    pyqtgraph
    pyyaml
    scipy
    imageio
    networkx

[options.entry_points]
console_scripts =
    hydra = hydra_python:main.cli

[options.extras_require]
habitat = networkx

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    *__init__.py:F401,F403
