<?xml version="1.0"?>
<package format="2">
  <name>hydra_dsg_builder</name>
  <version>1.0.0</version>
  <description>Utilities for building a scene graph from sensor data</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <author email="yunchang@mit.edu">Yun Chang</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gtsam</depend>
  <depend>hydra_topology</depend>
  <depend>kimera_pgmo</depend>
  <depend>kimera_semantics</depend>
  <depend>kimera_semantics_ros</depend>
  <depend>roscpp</depend>
  <depend>spark_dsg</depend>
  <depend>std_msgs</depend>
  <depend>teaserpp</depend>
  <depend>tf2_eigen</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>

  <export>
  </export>

</package>
