<?xml version="1.0"?>
<package format="2">
  <name>hydra_dsg_builder_ros</name>
  <version>1.0.0</version>
  <description>hydra ros nodes</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <author email="yunchang@mit.edu">Yun Chang</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hydra_topology</depend>
  <depend>hydra_dsg_builder</depend>
  <depend>kimera_semantics_ros</depend>
  <depend>roscpp</depend>
  <depend>spark_dsg</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>voxblox_ros</depend>

  <export>
  </export>

</package>
