<?xml version="1.0"?>
<package format="2">
  <name>hydra_eval</name>
  <version>0.0.1</version>
  <description>Evaluation library for hydra</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>voxblox</depend>
  <depend>kimera_dsg</depend>
  <depend>kimera_dsg_visualizer</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>

</package>
