<?xml version="1.0"?>
<package format="2">
  <name>hydra_msgs</name>
  <version>0.0.1</version>
  <description>Messages used for hydra</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>voxblox_msgs</depend>

  <export>
  </export>

</package>
